# CarSimulator

./: .gitignore  .kateproject  CMakeLists.txt  CarSimConfig.h.in  Makefile  Makefile.am  Makefile.in  README.md  SingleColor.fragmentshader  Walls.txt  aclocal.m4  car.cpp  car.h  config.h  config.status  configure  configure.ac  main.cpp  params.ne  startgenes
.deps/: CarSim-car.Po  CarSim-main.Po  CarSim-shader.Po  car.Po  main.Po  shader.Po
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
common/: shader.hpp
src/: car.cpp  car.h  collision.cpp  collision.h  common.h  detectLine.cpp  detectLine.h  evolution.cpp  evolution.h  main.cpp  render.cpp  render.h  shader.cpp  simulation.cpp  simulation.h  wall.cpp  wall.h  wallLoader.cpp  wallLoader.h
src/.deps/: CarSim-car.Po  CarSim-main.Po  CarSim-shader.Po
